Adding the FastAPI implementation

--- a/03-orchestrated-agents/03.2-connected_agents_tutorial.ipynb
+++ b/03-orchestrated-agents/03.2-connected_agents_tutorial.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7cc9c5b4",
    "metadata": {},
    "outputs": [
@@ -333,10 +333,14 @@
       "\n",
       "🧪 Testing SK coordinator with Azure AI agent plugins...\n",
       "👤 User: Get me Microsoft's stock price and Seattle's weather\n",
-      "🤖 SK Coordinator: Microsoft stock price: $350  \n",
-      "Seattle weather: 60 °F, cloudy\n",
-      "🤖 SK Coordinator: Microsoft stock price: $350  \n",
-      "Seattle weather: 60 °F, cloudy\n"
+      "🤖 SK Coordinator: Here’s the latest information you asked for:\n",
+      "\n",
+      "• Microsoft (MSFT) stock price: $350  \n",
+      "• Seattle weather: 60 °F and cloudy\n",
+      "🤖 SK Coordinator: Here’s the latest information you asked for:\n",
+      "\n",
+      "• Microsoft (MSFT) stock price: $350  \n",
+      "• Seattle weather: 60 °F and cloudy\n"
      ]
     },
     {
