Adding READMEs and the Logic App creation docs

--- a/03-orchestrated-agents/03.1-concurrent_and_sequential_orchestration_tutorial.ipynb
+++ b/03-orchestrated-agents/03.1-concurrent_and_sequential_orchestration_tutorial.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "f29d8dd6",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,8 @@
     "        Analytics Agent: Analyze the research data, identify trends, and create projections.\n",
     "        Content Agent: Synthesize all findings into a well-formatted executive report.\n",
     "        \n",
-    "        Each agent should build upon the previous agent's work to create a comprehensive analysis.\"\"\"\n",
+    "        Each agent should build upon the previous agent's work to create a comprehensive analysis.\n",
+    "        Be very concise in your responses, focusing on key insights and actionable recommendations.\"\"\"\n",
     "        \n",
     "        # Invoke the sequential orchestration\n",
     "        orchestration_result = await orchestration.invoke(\n",
@@ -516,7 +517,7 @@
     "        )\n",
     "        \n",
     "        # Wait for the results\n",
-    "        final_result = await orchestration_result.get(timeout=600)\n",
+    "        final_result = await orchestration_result.get(timeout=1200)\n",
     "        \n",
     "        print(f\"\\n✅ Sequential Orchestration Complete!\")\n",
     "        print(f\"🎯 Final Result: Comprehensive {topic} analysis through sequential pipeline\")\n",
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "46fbb310",
    "metadata": {},
    "outputs": [
@@ -669,7 +670,8 @@
     "        Analytics Agent: Analyze market data, growth patterns, and create projections for {topic}.\n",
     "        Content Agent: Create an engaging framework and structure for a {topic} report.\n",
     "        \n",
-    "        Each agent should work independently and provide insights from your area of expertise.\"\"\"\n",
+    "        Each agent should work independently and provide insights from your area of expertise.\n",
+    "        Br very concise in your responses, focusing on key insights and actionable recommendations.\"\"\"\n",
     "        \n",
     "        # Invoke the concurrent orchestration\n",
     "        orchestration_result = await orchestration.invoke(\n",
@@ -678,7 +680,7 @@
     "        )\n",
     "        \n",
     "        # Wait for all agents to complete their tasks\n",
-    "        results = await orchestration_result.get(timeout=600)\n",
+    "        results = await orchestration_result.get(timeout=1200)\n",
     "        \n",
     "        print(f\"\\n🎉 All agents completed their tasks!\")\n",
     "        print(f\"{'─'*60}\")\n",
@@ -1284,7 +1286,7 @@
     "            runtime=runtime\n",
     "        )\n",
     "        \n",
-    "        final_result = await result.get(timeout=30)\n",
+    "        final_result = await result.get(timeout=1200)\n",
     "        print(f\"\\n✅ Monitored orchestration completed!\")\n",
     "        print(f\"📄 Final Result Length: {len(str(final_result))} characters\")\n",
     "        \n",
@@ -1352,7 +1354,7 @@
     "            runtime=runtime3\n",
     "        )\n",
     "        \n",
-    "        results = await result.get(timeout=300)\n",
+    "        results = await result.get(timeout=1200)\n",
     "        \n",
     "        print(f\"\\n🎉 Advanced concurrent orchestration completed!\")\n",
     "        print(f\"📊 Generated {len(str(results))} specialized responses\")\n",
