--- a/04-orchestrated-agents-with-tools/04.3-logic_apps_hybrid_tutorial.ipynb
+++ b/04-orchestrated-agents-with-tools/04.3-logic_apps_hybrid_tutorial.ipynb
@@ -544,8 +544,7 @@
     "    toolset=hybrid_toolset\n",
     ")\n",
     "\n",
-    "print(f\"🤖 Hybrid Agent created: {hybrid_agent.id}\")\n",
-    "print(f\"🔧 Tools available: {len(hybrid_toolset)}\")"
+    "print(f\"🤖 Hybrid Agent created: {hybrid_agent.id}\")\n"
    ]
   },
   {
