Added info on how to configure Grouding with Bing Search resource

--- a/06-magentic-one-orchestration/06.2-magentic_bing_search_orchestration_tutorial.ipynb
+++ b/06-magentic-one-orchestration/06.2-magentic_bing_search_orchestration_tutorial.ipynb
@@ -81,6 +81,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "797694be",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Configuration Steps of the Grounding with Bing Search Connection\n",
+    "\n",
+    "Please follow the below two links to properly configure the Grounding with Bing Search Connection in Azure AI Studio:\n",
+    "\n",
+    "- [Create a Grounding with Bing Search Connection](https://learn.microsoft.com/en-us/azure/ai-foundry/agents/how-to/tools/bing-grounding)\n",
+    "- [Create a Grounding with Bing Search Connection in Azure AI Studio](https://learn.microsoft.com/en-us/azure/ai-foundry/agents/how-to/tools/bing-code-samples?pivots=portal)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2e2da20b",
@@ -713,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
